--- a/faq.html
+++ b/faq.html
@@ -491,8 +491,7 @@ z-index: 11;
 <font color="#aa8f8f"> | </font><a href="#myself"><font color="#d8b6b6">about myself</font></a>
 <font color="#aa8f8f"> | </font><a href="#aesthetic"><font color="#d8b6b6">about my aesthetic</font></a>
 <font color="#aa8f8f"> | </font><a href="#purity"><font color="#d8b6b6">purity & innocence</font></a>
-<font color="#aa8f8f"> | </font><a href="#fashion"><font color="#d8b6b6">some fashion talk</font></a>
-<font color="#aa8f8f"> | </font><a href="#cc"><font color="#d8b6b6">ccs, ids & kins</font></a>
+<font color="#aa8f8f"> | </font><a href="#fashion"><font color="#d8b6b6">my fashion style</font></a>
 <font color="#aa8f8f"> | </font><a href="#inspiration"><font color="#d8b6b6">about inspired accounts</font></a>
 <font color="#aa8f8f"> | </font><a href="#messages"><font color="#d8b6b6">messages & requests</font></a>
 <font color="#aa8f8f"> | </font><a href="#internet"><font color="#d8b6b6">my internet past</font></a>
@@ -664,539 +663,6 @@ basically, being spontaneous and searching for happiness is enough. i promise, i
 <br><br><br><br><br><br>
 </font>
 
-<a name="cc" id="cc"></a><br>
-<sub><sub><img src="https://i.imgur.com/aliDJwQ.png"></sub></sub><font color="#c4afa8">　do i have ids ?</font><br><br><br>
-<font color="#d8b9af">　( november . 23 . 2017 + july . 11 . 2019 )</font>
-<br><br>
-<font color="#B1A69E">
-although i am interested in kins / ids, i don't want to get involved in dramas, so i don't feel comfortable showing all of my kins..<br>
-but i believe it's safe to share my core ids with you ! since they are pretty much me, it couldn't be a problem :<br>
-<br>
-
-　　　　　　　　<sub>🤍</sub> <a id="linkbjinho" data-target="spoiler4id" class="btn-spoiler4id">kokona</a><br>
-
-<div id="spoiler4id" class="spoiler-area4id is-closed4id">
-<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<br>
-<center><img width="250" height="auto" src="https://i.imgur.com/ZFKJch8.png"/></center><br><br>
-<center><img width="250" height="auto" src="https://i.imgur.com/Ft6fDXx.jpg"/></center><br><br>
-<center><img width="250" height="auto" src="https://i.imgur.com/nURFajC.png"/></center>
-<br><br>
-</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<style>
-p { margin: 0; }
-.spoiler-area4id {
-
-}
-.spoiler-area4id.is-closed4id { height: 0; overflow: hidden; padding: 10px 0 0; }
-</style>
-<script>
-(function(){
-    "use strict";
-    var $btns = document.querySelectorAll('.btn-spoiler4id');
-    function loop($els, cb) {
-        var i = $els.length;
-        while(i--) {
-            cb($els[i]);
-        }
-    }
-    loop($btns, function($btn){
-        $btn.addEventListener("click", function(){
-            var $spoiler = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "kokona" ){
-                this.innerHTML = "kokona ˣ";
-                $spoiler.classList.remove("is-closed4id");
-            } else {
-                this.innerHTML = "kokona";
-                $spoiler.classList.add("is-closed4id");
-            }
-        });
-
-    });
-
-}());
-</script>
-
-　　　　　　　　<sub>🤍</sub> <a id="linkbjinho" data-target="spoiler2id" class="btn-spoiler2id">kagome</a><br>
-
-<div id="spoiler2id" class="spoiler-area2id is-closed2id">
-<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<br>
-<center><img src="https://i.imgur.com/YF37K3o.png"/></center><br><br>
-<center><img width="250" height="auto" src="https://i.imgur.com/akXFqmx.png"/></center><br><br>
-<center><img width="250" height="auto" src="https://i.imgur.com/tZPsNdV.png"/></center>
-<br><br>
-</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<style>
-p { margin: 0; }
-.spoiler-area2id {
-
-}
-.spoiler-area2id.is-closed2id { height: 0; overflow: hidden; padding: 10px 0 0; }
-</style>
-<script>
-(function(){
-    "use strict";
-    var $btns = document.querySelectorAll('.btn-spoiler2id');
-    function loop($els, cb) {
-        var i = $els.length;
-        while(i--) {
-            cb($els[i]);
-        }
-    }
-    loop($btns, function($btn){
-        $btn.addEventListener("click", function(){
-            var $spoiler = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "kagome" ){
-                this.innerHTML = "kagome ˣ";
-                $spoiler.classList.remove("is-closed2id");
-            } else {
-                this.innerHTML = "kagome";
-                $spoiler.classList.add("is-closed2id");
-            }
-        });
-
-    });
-
-}());
-</script>
-
-　　　　　　　　<sub>🤍</sub> <a id="linkbjinho" data-target="spoiler3id" class="btn-spoiler3id">lime</a><br>
-
-<div id="spoiler3id" class="spoiler-area3id is-closed3id">
-<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<br>
-<center><img width="250" height="auto" src="https://i.imgur.com/TSgqFRc.png"/></center><br><br>
-<center><img width="250" height="auto" src="https://i.imgur.com/iKSNYTH.png"/></center><br><br>
-<center><img width="250" height="auto" src="https://i.imgur.com/1JgOqbt.png"/></center>
-<br><br>
-</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<style>
-p { margin: 0; }
-.spoiler-area3id {
-
-}
-.spoiler-area3id.is-closed3id { height: 0; overflow: hidden; padding: 10px 0 0; }
-</style>
-<script>
-(function(){
-    "use strict";
-    var $btns = document.querySelectorAll('.btn-spoiler3id');
-    function loop($els, cb) {
-        var i = $els.length;
-        while(i--) {
-            cb($els[i]);
-        }
-    }
-    loop($btns, function($btn){
-        $btn.addEventListener("click", function(){
-            var $spoiler = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "lime" ){
-                this.innerHTML = "lime ˣ";
-                $spoiler.classList.remove("is-closed3id");
-            } else {
-                this.innerHTML = "lime";
-                $spoiler.classList.add("is-closed3id");
-            }
-        });
-
-    });
-
-}());
-</script>
-
-<br>
-( please don't call me by their names, i don't like it .. )<br><br>
-
-it's 100% okay if you identify with them too !<br>
-i don't believe that doubles ever make people invalid, but it's always okay to seek comfort, right ? i just can't agree with people being mean with each other ; ;<br>
-<br>
-now these are some of my comfort characters i identify with :<br>
-
-<br>
-
-　　　　　　　　<sub>🤍</sub> <a id="linkbjinho" data-target="spoiler3c" class="btn-spoiler3c">chii</a><br>
-
-<div id="spoiler3c" class="spoiler-area3c is-closed3c">
-<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<br>
-<center><img src="https://i.imgur.com/nqgkGPm.jpg"/></center>
-<br><br>
-</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<style>
-p { margin: 0; }
-.spoiler-area3c {
-
-}
-.spoiler-area3c.is-closed3c { height: 0; overflow: hidden; padding: 10px 0 0; }
-</style>
-<script>
-(function(){
-    "use strict";
-    var $btns = document.querySelectorAll('.btn-spoiler3c');
-    function loop($els, cb) {
-        var i = $els.length;
-        while(i--) {
-            cb($els[i]);
-        }
-    }
-    loop($btns, function($btn){
-        $btn.addEventListener("click", function(){
-            var $spoiler = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "chii" ){
-                this.innerHTML = "chii ˣ";
-                $spoiler.classList.remove("is-closed3c");
-            } else {
-                this.innerHTML = "chii";
-                $spoiler.classList.add("is-closed3c");
-            }
-        });
-
-    });
-
-}());
-</script>
-
-　　　　　　　　<sub>🤍</sub> <a id="linkbjinho" data-target="spoiler2c" class="btn-spoiler2c">bubbles</a><br>
-
-<div id="spoiler2c" class="spoiler-area2c is-closed2c">
-<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<br>
-<center><img src="https://i.imgur.com/UCJ0Bg4.gif"/></center>
-<br><br>
-</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<style>
-p { margin: 0; }
-.spoiler-area2c {
-
-}
-.spoiler-area2c.is-closed2c { height: 0; overflow: hidden; padding: 10px 0 0; }
-</style>
-<script>
-(function(){
-    "use strict";
-    var $btns = document.querySelectorAll('.btn-spoiler2c');
-    function loop($els, cb) {
-        var i = $els.length;
-        while(i--) {
-            cb($els[i]);
-        }
-    }
-    loop($btns, function($btn){
-        $btn.addEventListener("click", function(){
-            var $spoiler = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "bubbles" ){
-                this.innerHTML = "bubbles ˣ";
-                $spoiler.classList.remove("is-closed2c");
-            } else {
-                this.innerHTML = "bubbles";
-                $spoiler.classList.add("is-closed2c");
-            }
-        });
-
-    });
-
-}());
-</script>
-
-　　　　　　　　<sub>🤍</sub> <a id="linkbjinho" data-target="spoiler5c" class="btn-spoiler5c">fluttershy</a><br>
-
-<div id="spoiler5c" class="spoiler-area5c is-closed5c">
-<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<br>
-<center><img width="250" height="auto" src="https://i.imgur.com/TY4TxXZ.png"/></center>
-<br><br>
-</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<style>
-p { margin: 0; }
-.spoiler-area5c {
-
-}
-.spoiler-area5c.is-closed5c { height: 0; overflow: hidden; padding: 10px 0 0; }
-</style>
-<script>
-(function(){
-    "use strict";
-    var $btns = document.querySelectorAll('.btn-spoiler5c');
-    function loop($els, cb) {
-        var i = $els.length;
-        while(i--) {
-            cb($els[i]);
-        }
-    }
-    loop($btns, function($btn){
-        $btn.addEventListener("click", function(){
-            var $spoiler = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "fluttershy" ){
-                this.innerHTML = "fluttershy ˣ";
-                $spoiler.classList.remove("is-closed5c");
-            } else {
-                this.innerHTML = "fluttershy";
-                $spoiler.classList.add("is-closed5c");
-            }
-        });
-
-    });
-
-}());
-</script>
-
-　　　　　　　　<sub>🤍</sub> <a id="linkbjinho" data-target="spoiler6c" class="btn-spoiler6c">hanyuu</a><br>
-
-<div id="spoiler6c" class="spoiler-area6c is-closed6c">
-<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<br>
-<center><img width="300" height="auto" src="https://i.imgur.com/ApXVNCV.gif"/></center>
-<br><br>
-</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<style>
-p { margin: 0; }
-.spoiler-area6c {
-
-}
-.spoiler-area6c.is-closed6c { height: 0; overflow: hidden; padding: 10px 0 0; }
-</style>
-<script>
-(function(){
-    "use strict";
-    var $btns = document.querySelectorAll('.btn-spoiler6c');
-    function loop($els, cb) {
-        var i = $els.length;
-        while(i--) {
-            cb($els[i]);
-        }
-    }
-    loop($btns, function($btn){
-        $btn.addEventListener("click", function(){
-            var $spoiler = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "hanyuu" ){
-                this.innerHTML = "hanyuu ˣ";
-                $spoiler.classList.remove("is-closed6c");
-            } else {
-                this.innerHTML = "hanyuu";
-                $spoiler.classList.add("is-closed6c");
-            }
-        });
-
-    });
-
-}());
-</script>
-
-　　　　　　　　<sub>🤍</sub> <a id="linkbjinho" data-target="spoiler02c" class="btn-spoiler02c">dorothy</a><br>
-
-<div id="spoiler02c" class="spoiler-area02c is-closed02c">
-<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<br>
-<center><img width="400px" height="auto" src="https://i.imgur.com/Y3JKTZb.gif"/></center>
-<br><br>
-</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<style>
-p { margin: 0; }
-.spoiler-area02c {
-
-}
-.spoiler-area02c.is-closed02c { height: 0; overflow: hidden; padding: 10px 0 0; }
-</style>
-<script>
-(function(){
-    "use strict";
-    var $btns = document.querySelectorAll('.btn-spoiler02c');
-    function loop($els, cb) {
-        var i = $els.length;
-        while(i--) {
-            cb($els[i]);
-        }
-    }
-    loop($btns, function($btn){
-        $btn.addEventListener("click", function(){
-            var $spoiler = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "dorothy" ){
-                this.innerHTML = "dorothy ˣ";
-                $spoiler.classList.remove("is-closed02c");
-            } else {
-                this.innerHTML = "dorothy";
-                $spoiler.classList.add("is-closed02c");
-            }
-        });
-
-    });
-
-}());
-</script>
-
-　　　　　　　　<sub>🤍</sub> <a id="linkbjinho" data-target="spoiler1c" class="btn-spoiler1c">marron cream</a><br>
-
-<div id="spoiler1c" class="spoiler-area1c is-closed1c">
-<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<br>
-<center><img src="https://i.imgur.com/3IKULgH.jpg"/></center>
-<br><br>
-</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<style>
-p { margin: 0; }
-.spoiler-area1c {
-
-}
-.spoiler-area1c.is-closed1c { height: 0; overflow: hidden; padding: 10px 0 0; }
-</style>
-<script>
-(function(){
-    "use strict";
-    var $btns = document.querySelectorAll('.btn-spoiler1c');
-    function loop($els, cb) {
-        var i = $els.length;
-        while(i--) {
-            cb($els[i]);
-        }
-    }
-    loop($btns, function($btn){
-        $btn.addEventListener("click", function(){
-            var $spoiler = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "marron cream" ){
-                this.innerHTML = "marron cream ˣ";
-                $spoiler.classList.remove("is-closed1c");
-            } else {
-                this.innerHTML = "marron cream";
-                $spoiler.classList.add("is-closed1c");
-            }
-        });
-
-    });
-
-}());
-</script>
-
-　　　　　　　　<sub>🤍</sub> <a id="linkbjinho" data-target="spoiler4c" class="btn-spoiler4c">ayu</a><br>
-
-<div id="spoiler4c" class="spoiler-area4c is-closed4c">
-<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<br>
-<center><img width="300" height="auto" src="https://i.imgur.com/WQwHWMx.gif"/></center>
-<br><br>
-</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<style>
-p { margin: 0; }
-.spoiler-area4c {
-
-}
-.spoiler-area4c.is-closed4c { height: 0; overflow: hidden; padding: 10px 0 0; }
-</style>
-<script>
-(function(){
-    "use strict";
-    var $btns = document.querySelectorAll('.btn-spoiler4c');
-    function loop($els, cb) {
-        var i = $els.length;
-        while(i--) {
-            cb($els[i]);
-        }
-    }
-    loop($btns, function($btn){
-        $btn.addEventListener("click", function(){
-            var $spoiler = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "ayu" ){
-                this.innerHTML = "ayu ˣ";
-                $spoiler.classList.remove("is-closed4c");
-            } else {
-                this.innerHTML = "ayu";
-                $spoiler.classList.add("is-closed4c");
-            }
-        });
-
-    });
-
-}());
-</script>
-
-　　　　　　　　<sub>🤍</sub> <a id="linkbjinho" data-target="spoiler7c" class="btn-spoiler7c">ribbonsanka</a><br>
-
-<div id="spoiler7c" class="spoiler-area7c is-closed7c">
-<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<br>
-<center><img width="200" height="auto" src="https://i.imgur.com/e4KFcdi.png"/></center>
-<br><br>
-</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<style>
-p { margin: 0; }
-.spoiler-area7c {
-
-}
-.spoiler-area7c.is-closed7c { height: 0; overflow: hidden; padding: 10px 0 0; }
-</style>
-<script>
-(function(){
-    "use strict";
-    var $btns = document.querySelectorAll('.btn-spoiler7c');
-    function loop($els, cb) {
-        var i = $els.length;
-        while(i--) {
-            cb($els[i]);
-        }
-    }
-    loop($btns, function($btn){
-        $btn.addEventListener("click", function(){
-            var $spoiler = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "ribbonsanka" ){
-                this.innerHTML = "ribbonsanka ˣ";
-                $spoiler.classList.remove("is-closed7c");
-            } else {
-                this.innerHTML = "ribbonsanka";
-                $spoiler.classList.add("is-closed7c");
-            }
-        });
-
-    });
-
-}());
-</script>
-
-　　　　　　　　<sub>🤍</sub> <a id="linkbjinho" data-target="spoiler8c" class="btn-spoiler8c">solace</a><br>
-
-<div id="spoiler8c" class="spoiler-area8c is-closed8c">
-<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<br>
-<center><img src="https://i.imgur.com/hwXCOT2.gif"/></center>
-<br><br>
-</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<style>
-p { margin: 0; }
-.spoiler-area8c {
-
-}
-.spoiler-area8c.is-closed8c { height: 0; overflow: hidden; padding: 10px 0 0; }
-</style>
-<script>
-(function(){
-    "use strict";
-    var $btns = document.querySelectorAll('.btn-spoiler8c');
-    function loop($els, cb) {
-        var i = $els.length;
-        while(i--) {
-            cb($els[i]);
-        }
-    }
-    loop($btns, function($btn){
-        $btn.addEventListener("click", function(){
-            var $spoiler = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "solace" ){
-                this.innerHTML = "solace ˣ";
-                $spoiler.classList.remove("is-closed8c");
-            } else {
-                this.innerHTML = "solace";
-                $spoiler.classList.add("is-closed8c");
-            }
-        });
-
-    });
-
-}());
-</script>
-<br>
-it's a little complicated to define these as ids, but i can say i do see myself in them to some extent & they are really heartwarming for me as well ..<br>
-that being said, i don't mind at all if you like them too !
-<br><br><br><br><br><br>
-</font>
 
 <a name="inspiration" id="inspiration"></a><br>
 <sub><sub><img src="https://i.imgur.com/aliDJwQ.png"></sub></sub><font color="#c4afa8">　how do i feel about accounts inspired on mine ?</font><br><br><br>
