--- a/faq.html
+++ b/faq.html
@@ -523,7 +523,7 @@ i personally don't like to use "names", "communities", or any form of group iden
 it's part of what i long to : to think alone about things and formulate my own opinions according to what i individually believe. this is something i truly always support and encourage, but i understand that it is simpler to use groups when you are searching for the right path in life, i have also done this for some time !<br>
 so, if you really have an interest in knowing what i think about things, please take your time to read my texts.<br>
 i know it can be tiring, but i really think it's important to write clearly what i think instead of throwing random information here and there and calling myself things that i don't really consider myself <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font><br>
-you're always free to question me about things and point out when i have some behavior that doesn't match what i believe, after all, i really want to improve and that would really help me !<br>
+you're always free to question me about topics and point out when i have some behavior that doesn't match what i believe, after all, i really want to improve and that would really help me !<br>
 but please don't question me about supporting or not movements and communities, because i am not part of any of this. i just support what i say i support, it's that simple.<br>
 <br><br><br><br><br><br>
 </font>
@@ -741,15 +741,15 @@ i hope this answers a few things about how i got here !
 
 
 <a name="numbers" id="numbers"></a><br>
-<sub><sub><img src="https://i.imgur.com/aliDJwQ.png"></sub></sub><font color="#c4afa8">　why don't i want any more numbers ?</font><br><br><br>
+<sub><sub><img src="https://i.imgur.com/aliDJwQ.png"></sub></sub><font color="#c4afa8">　why do i dislike social media metric numbers ?</font><br><br><br>
 <font color="#d8b9af">　( october . 18 . 2018 )</font>
 <br><br>
 <font color="#B1A69E">
 social media have created this need for big numbers in people and i feel that i don't have reasons to keep seeing numbers than to praise a false reputation for my image on the internet. i'm just a normal person doing my best, just like any other person. i reflected a lot on this and people treating me differently because of numbers is not something that i value and i don't think is good for me or the visitors. the race for numbers and fame is not the kind of thing i'd be proud to encourage on my site ( or anywhere else, but unfortunately that's not always an option, hence why i avoid social media so much ).<br>
 i used to keep numbers exposed despite not approving their overvaluation because i believed it could bring public ; maybe people could took me more seriously if i had big numbers ? maybe they could allow themselves to look at the site more easily if they saw this "seal of approval" from previous visitors ?<br>
-... but is it really worth blinding people with such superficial information and then saying it's not important ?<br>
+.. but is it really worth blinding people with such superficial information and then saying it's not important ?<br>
 i have come to the conclusion that i must be an example and show that appreciation of numbers is not healthy or productive.<br>
-i felt free from this race for numbers as i moved away from social media, and i discovered over time that frequent visitors of my site are not here either by the numbers, but by the content, just as they are on other interesting sites and blogs of the internet. it definitely warms my heart to know that my work honestly attracts so many people <font color="#d3a5a5" style="font-size:11px;">♡</font><br>
+i felt free from this race for numbers as i started moving away from social media, and i discovered over time that frequent visitors of my site are not here either by the numbers, but by the content, just as they are on other interesting sites and blogs of the internet. it definitely warms my heart to know that my work honestly attracts so many people <font color="#d3a5a5" style="font-size:11px;">♡</font><br>
 it's extremely invigorating to be free of ego needs and social fears.<br>
 hiding numbers and keeping written feedback is more productive for everyone. i wish from the bottom of my heart that people would exchange more real interaction, not in the form of numbers, but words and actions.<br>
 i'm little by little getting more and more clean of the "numbers", and it's making me feel really good and refreshed.. !<br>
@@ -775,7 +775,7 @@ is it really healthy and safe for you, right now ?<br>
 
 
 <a name="snippets" id="snippets"></a><br>
-<sub><sub><img src="https://i.imgur.com/aliDJwQ.png"></sub></sub><font color="#c4afa8">　why do i use web code snippets to modify social media sites ?</font><br><br><br>
+<sub><sub><img src="https://i.imgur.com/aliDJwQ.png"></sub></sub><font color="#c4afa8">　how do i use web code snippets to modify social media sites ?</font><br><br><br>
 <font color="#d8b9af">　( january . 31 . 2022 )</font>
 <br><br>
 <font color="#B1A69E">
@@ -937,7 +937,7 @@ just remember that you deserve to be happy and respected, you are strong and lov
 
 
 <a name="html" id="html"></a><br>
-<sub><sub><img src="https://i.imgur.com/aliDJwQ.png"></sub></sub><font color="#c4afa8">　how do i make my layouts ?</font><br><br><br>
+<sub><sub><img src="https://i.imgur.com/aliDJwQ.png"></sub></sub><font color="#c4afa8">　how do i make my websites ?</font><br><br><br>
 <font color="#d8b9af">　( november . 15 . 2018 + march . 23 . 2020 )</font>
 <br><br>
 <font color="#B1A69E">
