--- a/recommended.html
+++ b/recommended.html
@@ -481,7 +481,9 @@ z-index: 3;
 <center>
 <img src="https://i.imgur.com/WoYT1el.png"><br><br><br>
 
-<a href="https://web.archive.org/web/20080702000153/http://princessportal.com/the-princess-code/" target="_blank"><img width="88px" height="auto" src="https://i.imgur.com/tcl2qna.gif"></a>
+<a href="https://purupurple.neocities.org" target="_blank"><img src="https://i.imgur.com/fbBjWCT.png"></a>　
+<a href="https://web.archive.org/web/20080702000153/http://princessportal.com/the-princess-code/" target="_blank"><img width="88px" height="auto" src="https://i.imgur.com/tcl2qna.gif"></a>　
+<a href="https://hat.neocities.org" target="_blank"><img src="https://imgur.com/XxSC7fX.gif"></a>
 
 　　‌‌<br><br><a href="https://pompon.neocities.org" target="_blank"><img src="https://i.imgur.com/vaXnzqN.gif"></a>
 　<a href="https://sanhyo.neocities.org" target="_blank"><img src="https://i.imgur.com/VAuDFkt.gif"></a>
