--- a/recommended.html
+++ b/recommended.html
@@ -481,8 +481,11 @@ z-index: 3;
 <center>
 <img src="https://i.imgur.com/WoYT1el.png"><br><br><br>
 
-<a href="https://purupurple.neocities.org" target="_blank"><img src="https://i.imgur.com/fbBjWCT.png"></a>　
-<a href="https://web.archive.org/web/20080702000153/http://princessportal.com/the-princess-code/" target="_blank"><img width="88px" height="auto" src="https://i.imgur.com/tcl2qna.gif"></a>　
+<a href="https://datura.neocities.org" target="_blank"><img src="https://i.imgur.com/ZEr5wPY.png"></a>
+　<a href="https://ruber-rosis.blogspot.com" target="_blank"><img src="https://i.imgur.com/rq0YRg3.gif"></a>　　‌‌
+
+<br><br><a href="https://purupurple.neocities.org" target="_blank"><img src="https://i.imgur.com/fbBjWCT.png"></a>　
+<sub><sub><sub><sub><a href="https://web.archive.org/web/20080702000153/http://princessportal.com/the-princess-code/" target="_blank"><img width="88px" height="50px" src="https://i.imgur.com/tcl2qna.gif"></a></sub></sub></sub></sub>　
 <a href="https://hat.neocities.org" target="_blank"><img src="https://imgur.com/XxSC7fX.gif"></a>
 
 　　‌‌<br><br><a href="https://pompon.neocities.org" target="_blank"><img src="https://i.imgur.com/vaXnzqN.gif"></a>
