--- a/recommended.html
+++ b/recommended.html
@@ -476,43 +476,48 @@ z-index: 3;
 <font color="#a19489">these are some beautiful sites & blogs that i recommend</font></center>
 <br><br>
 
-<div style="line-height:6px;">
+<div style="line-height:8px;">
 	
 <center>
 <img src="https://i.imgur.com/WoYT1el.png"><br><br><br>
 
-<a href="https://datura.neocities.org" target="_blank"><img src="https://i.imgur.com/ZEr5wPY.png"></a>
-　<a href="https://ruber-rosis.blogspot.com" target="_blank"><img src="https://i.imgur.com/rq0YRg3.gif"></a>　　‌‌
+　<a href="https://datura.neocities.org" target="_blank"><img src="https://i.imgur.com/ZEr5wPY.png"></a>
+　<a href="https://ruber-rosis.blogspot.com" target="_blank"><img src="https://i.imgur.com/rq0YRg3.gif"></a>
+　<a href="https://cinni.net/directory/" target="_blank"><img src="https://i.imgur.com/5BxDDhb.png"></a>　　‌‌
 
 <br><br><a href="https://purupurple.neocities.org" target="_blank"><img src="https://i.imgur.com/fbBjWCT.png"></a>　
 <sub><sub><sub><sub><a href="https://web.archive.org/web/20080702000153/http://princessportal.com/the-princess-code/" target="_blank"><img width="88px" height="50px" src="https://i.imgur.com/tcl2qna.gif"></a></sub></sub></sub></sub>　
-<a href="https://hat.neocities.org" target="_blank"><img src="https://imgur.com/XxSC7fX.gif"></a>
+<a href="https://hat.neocities.org" target="_blank"><img src="https://imgur.com/XxSC7fX.gif"></a>　
 
-　　‌‌<br><br><a href="https://pompon.neocities.org" target="_blank"><img src="https://i.imgur.com/vaXnzqN.gif"></a>
+<br><br>　　<a href="https://dreamhack.neocities.org" target="_blank"><img src="https://i.imgur.com/yXQ7GsF.gif"></a>
+　<a href="https://foxfable.fun" target="_blank"><img src="https://i.imgur.com/p2rgR8y.gif"></a>
+　<a href="https://rosedryad.neocities.org" target="_blank"><img src="https://i.imgur.com/rSB9QMd.gif"></a>　　‌‌
+
+　<br><br><a href="https://pompon.neocities.org" target="_blank"><img src="https://i.imgur.com/vaXnzqN.gif"></a>
 　<a href="https://sanhyo.neocities.org" target="_blank"><img src="https://i.imgur.com/VAuDFkt.gif"></a>
 　<a href="https://ratpilled.neocities.org" target="_blank"><img src="https://i.imgur.com/AzvzqGz.gif"></a>
 
-　　‌‌<br><br><a href="http://www.dollhospital.com.br/" target="_blank"><img width="88px" height="35px" src="http://i.imgur.com/CPLYLD2.png"/></a>
+　<br><br><a href="http://www.dollhospital.com.br/" target="_blank"><img width="88px" height="35px" src="http://i.imgur.com/CPLYLD2.png"/></a>
 　<a href="http://theprincesschateau.silentears.net" target="_blank"><img src="https://i.imgur.com/58xmjAn.gif"></a>
-　‌‌<a href="https://luupon.art" target="_blank"><img src="https://i.imgur.com/GKo0nYh.png"></a>
+　‌‌<a href="https://luupon.art" target="_blank"><img src="https://i.imgur.com/GKo0nYh.png"></a>　　
 
-　　‌‌<br><br><a href="https://allyratworld.neocities.org" target="_blank"><img src="https://i.imgur.com/fTCMebo.png"></a>
+<br><br><a href="https://allyratworld.neocities.org" target="_blank"><img src="https://i.imgur.com/fTCMebo.png"></a>
 　<a href="https://mimkitty.com" target="_blank"><img src="https://i.imgur.com/6W5CjTW.gif"></a>
-　<a href="https://birdsandstars.neocities.org" target="_blank"><img src="https://i.imgur.com/gfnwIV7.png"></a>
+　<a href="https://birdsandstars.neocities.org" target="_blank"><img src="https://i.imgur.com/gfnwIV7.png"></a>　
 
-　　‌‌<br><br><a href="https://cloudworld.neocities.org" target="_blank"><img src="https://i.imgur.com/MXRItda.gif"></a>
+　<br><br><a href="https://cloudworld.neocities.org" target="_blank"><img src="https://i.imgur.com/MXRItda.gif"></a>
 　<a href="https://dive.kuchiki.net" target="_blank"><img src="https://i.imgur.com/I3JS0NJ.gif"></a>
 　<a href="https://www.lejlart.com/apple.html" target="_blank"><img src="https://i.imgur.com/tHRwo5p.gif"></a>
 
-　　‌‌<br><br><a href="https://candymilk.neocities.org" target="_blank"><img src="https://i.imgur.com/7iYy1hj.gif"></a>
+　<br><br><a href="https://candymilk.neocities.org" target="_blank"><img src="https://i.imgur.com/7iYy1hj.gif"></a>
 　<a href="https://hishoku-sora.blogspot.com" target="_blank"><img src="https://i.imgur.com/VpojhaF.gif"></a>
 　<a href="https://blissnet.neocities.org" target="_blank"><img src="https://i.imgur.com/m3tcSwl.png"></a>
 
-　　‌‌<br><br><a href="https://cinni.neocities.org" target="_blank"><img src="https://i.imgur.com/LH4PdzU.png"></a>
+　<br><br><a href="https://cinni.net" target="_blank"><img src="https://i.imgur.com/LH4PdzU.png"></a>
 　<a href="https://chelemige.neocities.org" target="_blank"><img src="https://i.imgur.com/0HaSI7R.gif"></a>
 　<a href="https://gutz.neocities.org" target="_blank"><img src="https://i.imgur.com/NB1QV8c.gif"></a>
 
-　　‌‌<br><br>　<a href="https://kyumiare.neocities.org" target="_blank"><img src="https://i.imgur.com/SDbQzIw.png"></a>
+　<br><br>　<a href="https://kyumiare.neocities.org" target="_blank"><img src="https://i.imgur.com/SDbQzIw.png"></a>
 　<a href="https://reia.neocities.org" target="_blank"><img src="https://i.imgur.com/Oo4OZuP.png"></a>
 　<a href="https://nuange.neocities.org/" target="_blank"><img src="https://i.imgur.com/4uYk1i5.gif"></a>
 
@@ -520,51 +525,51 @@ z-index: 3;
 　<a href="https://softheartclinic.neocities.org" target="_blank"><img src="https://i.imgur.com/tQa81Hd.gif"></a>
 　<a href="https://valentines.neocities.org" target="_blank"><img src="https://i.imgur.com/j1itU4N.gif"></a>
 
-　　‌‌<br><br>　<a href="https://web.archive.org/web/20120106190018/http://makipooh.chu.jp/apupu/top.html" target="_blank"><img src="https://i.imgur.com/MPQdxyU.gif"></a>
-<a href="https://angel99.neocities.org" target="_blank"><img src="https://i.imgur.com/DS7h4zO.png"></a>
+　　‌<br><br>　<a href="https://web.archive.org/web/20120106190018/http://makipooh.chu.jp/apupu/top.html" target="_blank"><img src="https://i.imgur.com/MPQdxyU.gif"></a>
+<sub><sub><a href="https://angel99.neocities.org" target="_blank"><img src="https://i.imgur.com/DS7h4zO.png"></a></sub></sub>
 <a href="https://farinawvence.blogspot.com" target="_blank"><img src="https://i.imgur.com/dyNNW2I.gif"></a>
 
-　　<br><br><a href="https://web.archive.org/web/20130501011051/http://sao-charin.babymilk.jp/" target="_blank"><img src="https://i.imgur.com/orHAzIJ.gif"></a>
+　<br><br><a href="https://web.archive.org/web/20130501011051/http://sao-charin.babymilk.jp/" target="_blank"><img src="https://i.imgur.com/orHAzIJ.gif"></a>
 　<a href="https://www.aniblog.com.mx" target="_blank"><img src="https://i.imgur.com/TYCJqcI.gif"></a>
 　<a href="https://woneland.blogspot.com" target="_blank"><img src="https://i.imgur.com/41vCABt.gif"></a>
 
-　<br><br><a href="https://web.archive.org/web/20090601221008/http://www5.pf-x.net/~car/" target="_blank"><img src="https://i.imgur.com/W97nIbu.gif"></a>
+<br><br><a href="https://web.archive.org/web/20090601221008/http://www5.pf-x.net/~car/" target="_blank"><img src="https://i.imgur.com/W97nIbu.gif"></a>
 　<a href="https://web.archive.org/web/20121020180143/http://cheerful.hacca.jp/" target="_blank"><img src="https://i.imgur.com/m4UM3W1.gif"></a>
 　<a href="https://web.archive.org/web/20130517212125/http://susuda.skr.jp/" target="_blank"><img src="https://i.imgur.com/nmVTFnS.gif"></a>
 
-　<br><br><a href="http://whimsical.heartette.net/" target="_blank"><img src="https://i.imgur.com/Szmjm6A.gif"></a>
+<br><br><a href="http://whimsical.heartette.net/" target="_blank"><img src="https://i.imgur.com/Szmjm6A.gif"></a>
 　<a href="https://web.archive.org/web/20110716131740/http://hana.poche.jp/angel66l/index.html" target="_blank"><img src="https://i.imgur.com/kzCZCDf.gif"></a>
 　<a href="https://web.archive.org/web/20090227235121/http://www.lovecandied.com/" target="_blank"><img src="https://i.imgur.com/hUQytvV.gif"></a>
 
-　<br><br><a href="http://bitmapdreams.lastsecret.net/" target="_blank"><img src="https://i.imgur.com/NrB9UB9.gif"></a>
+<br><br><a href="http://bitmapdreams.lastsecret.net/" target="_blank"><img src="https://i.imgur.com/NrB9UB9.gif"></a>
 　<a href="http://www.asterism-m.com/" target="_blank"><img src="https://i.imgur.com/zulajRd.gif"></a>
 　<a href="http://beru.hippy.jp/" target="_blank"><img src="https://i.imgur.com/gLxOf8q.gif"></a>
 
-　<br><br><a href="https://web.archive.org/web/20130710021102/http://cherish.silk.to:80/" target="_blank"><img src="https://i.imgur.com/kft2rpL.gif"></a>
+<br><br><a href="https://web.archive.org/web/20130710021102/http://cherish.silk.to:80/" target="_blank"><img src="https://i.imgur.com/kft2rpL.gif"></a>
 　<a href="https://web.archive.org/web/20080501195432/http://sugarpink.girly.jp/pink.html" target="_blank"><img src="https://i.imgur.com/0Y4xXQR.gif"></a>
 　<a href="https://web.archive.org/web/20080815120448/http://www.emirin.com/" target="_blank"><img src="https://i.imgur.com/R9En3MI.gif"></a>
 
-　<br><br><a href="https://web.archive.org/web/20110728110156/http://chu.itigo.jp/" target="_blank"><img src="https://i.imgur.com/65XWh6x.gif"></a>
+<br><br><a href="https://web.archive.org/web/20110728110156/http://chu.itigo.jp/" target="_blank"><img src="https://i.imgur.com/65XWh6x.gif"></a>
 　<a href="http://sorahana.ciao.jp/" target="_blank"><img src="https://i.imgur.com/jokl3rn.gif"></a>
 　<a href="https://web.archive.org/web/20080501195432/http://sugarpink.girly.jp/pink.html" target="_blank"><img src="https://i.imgur.com/ouVX1va.gif"></a>
 
-　<br><br><a href="http://milky.geocities.jp/nyarose00/" target="_blank"><img src="https://i.imgur.com/zwZtYVy.gif"></a>
+<br><br><a href="http://milky.geocities.jp/nyarose00/" target="_blank"><img src="https://i.imgur.com/zwZtYVy.gif"></a>
 　<a href="http://lame.xii.jp/lame/" target="_blank"><img src="https://i.imgur.com/zR8VqMT.png"></a>
 　<a href="https://web.archive.org/web/20080815042056/http://cherish.silk.to/" target="_blank"><img src="https://i.imgur.com/Z2vfmvm.gif"></a>
 
-　<br><br><a href="https://web.archive.org/web/20111101151554/http://www.mirukuma.com/" target="_blank"><img src="https://i.imgur.com/8jgus9J.gif"></a>
+<br><br><a href="https://web.archive.org/web/20111101151554/http://www.mirukuma.com/" target="_blank"><img src="https://i.imgur.com/8jgus9J.gif"></a>
 　　<a href="http://web.archive.org/web/20170706161915/http://engrampixel.co.vu/" target="_blank"><img src="https://i.imgur.com/eMOOTfI.gif"></a>
 　　<a href="https://web.archive.org/web/20160616220750/http://www.emirin.com/" target="_blank"><img src="https://i.imgur.com/9jcAUVv.gif"></a>
 
-　<br><br><a href="https://web.archive.org/web/20110728061529/http://susuda.skr.jp/" target="_blank"><img src="https://i.imgur.com/9EvtDb7.gif"></a>
+<br><br><a href="https://web.archive.org/web/20110728061529/http://susuda.skr.jp/" target="_blank"><img src="https://i.imgur.com/9EvtDb7.gif"></a>
 　<a href="http://nyokiope.com/" target="_blank"><img src="https://i.imgur.com/CJHMori.gif"></a>
 　<a href="https://web.archive.org/web/20121105152819/http://www.petitsweets.org/" target="_blank"><img src="https://i.imgur.com/ftzJEFC.gif"></a>
 
-　<br><br><a href="https://web.archive.org/web/20101120155824/http://cuty-make.info/framepage.html" target="_blank"><img src="https://i.imgur.com/RSzIZtu.gif"></a>
+<br><br><a href="https://web.archive.org/web/20101120155824/http://cuty-make.info/framepage.html" target="_blank"><img src="https://i.imgur.com/RSzIZtu.gif"></a>
 　<a href="https://web.archive.org/web/20100923153817/http://sao-charin.babymilk.jp:80/charin/mainpage.html" target="_blank"><img src="https://i.imgur.com/AJOC34r.gif"></a>
 　<a href="https://web.archive.org/web/20080428131528/http://fm-fragment.girly.jp/" target="_blank"><img src="https://i.imgur.com/hwEyio3.gif"></a>
 
-　<br><br><a href="http://ichigoaporo.jp/" target="_blank"><img src="https://i.imgur.com/3OsWP3e.gif"></a>
+<br><br><a href="http://ichigoaporo.jp/" target="_blank"><img src="https://i.imgur.com/3OsWP3e.gif"></a>
 　<a href="https://web.archive.org/web/20100823031436/http://engel.websozai.jp:80/" target="_blank"><img src="https://i.imgur.com/jNtEpEd.gif"></a>
 　<a href="https://web.archive.org/web/20110925164148/http://www.f6.dion.ne.jp:80/~kirako7/" target="_blank"><img src="https://i.imgur.com/Rk6dEkh.gif"></a>
 
