--- a/recommended.html
+++ b/recommended.html
@@ -523,13 +523,21 @@ z-index: 3;
 
 　　‌‌<br><br>　<a href="https://teddybear-halo.neocities.org" target="_blank"><img src="https://i.imgur.com/wZIp3Fp.gif"></a>
 　<a href="https://softheartclinic.neocities.org" target="_blank"><img src="https://i.imgur.com/tQa81Hd.gif"></a>
-　<a href="https://valentines.neocities.org" target="_blank"><img src="https://i.imgur.com/j1itU4N.gif"></a>
+　<a href="https://valentines.neocities.org" target="_blank"><img src="https://i.imgur.com/j1itU4N.gif"></a>　　
 
-　　‌<br><br>　<a href="https://web.archive.org/web/20120106190018/http://makipooh.chu.jp/apupu/top.html" target="_blank"><img src="https://i.imgur.com/MPQdxyU.gif"></a>
+<br><br>　<a href="https://web.archive.org/web/20120106190018/http://makipooh.chu.jp/apupu/top.html" target="_blank"><img src="https://i.imgur.com/MPQdxyU.gif"></a>
 <sub><sub><a href="https://angel99.neocities.org" target="_blank"><img src="https://i.imgur.com/DS7h4zO.png"></a></sub></sub>
-<a href="https://farinawvence.blogspot.com" target="_blank"><img src="https://i.imgur.com/dyNNW2I.gif"></a>
+<a href="https://farinawvence.blogspot.com" target="_blank"><img src="https://i.imgur.com/dyNNW2I.gif"></a>　
 
-　<br><br><a href="https://web.archive.org/web/20130501011051/http://sao-charin.babymilk.jp/" target="_blank"><img src="https://i.imgur.com/orHAzIJ.gif"></a>
+<br><br><a href="https://web.archive.org/web/20071011001230/http://bouncy-bubbles.net/" target="_blank"><img src="https://i.imgur.com/o6e7mGu.gif"></a>
+　<a href="https://archive.cinni.net" target="_blank"><img src="https://i.imgur.com/R4CSeQY.gif"></a>
+　<a href="https://web.archive.org/web/20120731071140/http://www.kintanti.com/" target="_blank"><img src="https://i.imgur.com/C1xjRmW.gif"></a>
+
+<br><br><a href="https://web.archive.org/web/20070306000908/http://www.neonlove.net/gum-chu/" target="_blank"><img src="https://i.imgur.com/5aBWBwd.gif"></a>
+　<a href="https://sleepysprout.neocities.org" target="_blank"><img src="https://i.imgur.com/sjOXajC.png"></a>
+　<a href="https://web.archive.org/web/20061231141333/http://www.neonlove.net/lani/" target="_blank"><img src="https://i.imgur.com/X88QyiF.gif"></a>
+
+<br><br><a href="https://web.archive.org/web/20130501011051/http://sao-charin.babymilk.jp/" target="_blank"><img src="https://i.imgur.com/orHAzIJ.gif"></a>
 　<a href="https://www.aniblog.com.mx" target="_blank"><img src="https://i.imgur.com/TYCJqcI.gif"></a>
 　<a href="https://woneland.blogspot.com" target="_blank"><img src="https://i.imgur.com/41vCABt.gif"></a>
 
