--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
 <link rel="shortcut icon" href="https://i.imgur.com/c2cyx81.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <meta name="title" content="ഒ">
-<meta name="description" content="꒰ 𝑎 𝑚𝑒𝑙𝑖𝑠𝑠𝑎 𝑓𝑙𝑜𝑤𝑒𝑟 𝑡𝑤𝑖𝑔 𝑖𝑛𝑠𝑖𝑑𝑒 𝑎 𝑝𝑜𝑡, 𝑖𝑛 𝑡ℎ𝑒 𝑚𝑖𝑑𝑑𝑙𝑒 𝑜𝑓 𝑎 𝑤𝑖𝑛𝑑𝑜𝑤 𝑠𝑖𝑙𝑙 ꒱">
+<meta name="description" content="𝑎 𝑚𝑒𝑙𝑖𝑠𝑠𝑎 𝑓𝑙𝑜𝑤𝑒𝑟 𝑡𝑤𝑖𝑔 𝑖𝑛𝑠𝑖𝑑𝑒 𝑎 𝑝𝑜𝑡, 𝑖𝑛 𝑡ℎ𝑒 𝑚𝑖𝑑𝑑𝑙𝑒 𝑜𝑓 𝑎 𝑤𝑖𝑛𝑑𝑜𝑤 𝑠𝑖𝑙𝑙">
 <meta name="theme-color" content="#f7e9ed">
 <meta property="og:url" content="https://middlepot.com">
 <meta property="og:title" content="ഒ">
-<meta property="og:description" content="꒰ 𝑎 𝑚𝑒𝑙𝑖𝑠𝑠𝑎 𝑓𝑙𝑜𝑤𝑒𝑟 𝑡𝑤𝑖𝑔 𝑖𝑛𝑠𝑖𝑑𝑒 𝑎 𝑝𝑜𝑡, 𝑖𝑛 𝑡ℎ𝑒 𝑚𝑖𝑑𝑑𝑙𝑒 𝑜𝑓 𝑎 𝑤𝑖𝑛𝑑𝑜𝑤 𝑠𝑖𝑙𝑙 ꒱">
+<meta property="og:description" content="𝑎 𝑚𝑒𝑙𝑖𝑠𝑠𝑎 𝑓𝑙𝑜𝑤𝑒𝑟 𝑡𝑤𝑖𝑔 𝑖𝑛𝑠𝑖𝑑𝑒 𝑎 𝑝𝑜𝑡, 𝑖𝑛 𝑡ℎ𝑒 𝑚𝑖𝑑𝑑𝑙𝑒 𝑜𝑓 𝑎 𝑤𝑖𝑛𝑑𝑜𝑤 𝑠𝑖𝑙𝑙">
 <meta property="og:image" content="https://middlepot.com/img/pure.jpg">
 <meta property="og:image:type" content="image/jpeg">
 <meta property="og:type" content="website">
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://middlepot.com">
 <meta property="twitter:title" content="ഒ">
-<meta property="twitter:description" content="꒰ 𝑎 𝑚𝑒𝑙𝑖𝑠𝑠𝑎 𝑓𝑙𝑜𝑤𝑒𝑟 𝑡𝑤𝑖𝑔 𝑖𝑛𝑠𝑖𝑑𝑒 𝑎 𝑝𝑜𝑡, 𝑖𝑛 𝑡ℎ𝑒 𝑚𝑖𝑑𝑑𝑙𝑒 𝑜𝑓 𝑎 𝑤𝑖𝑛𝑑𝑜𝑤 𝑠𝑖𝑙𝑙 ꒱">
+<meta property="twitter:description" content="𝑎 𝑚𝑒𝑙𝑖𝑠𝑠𝑎 𝑓𝑙𝑜𝑤𝑒𝑟 𝑡𝑤𝑖𝑔 𝑖𝑛𝑠𝑖𝑑𝑒 𝑎 𝑝𝑜𝑡, 𝑖𝑛 𝑡ℎ𝑒 𝑚𝑖𝑑𝑑𝑙𝑒 𝑜𝑓 𝑎 𝑤𝑖𝑛𝑑𝑜𝑤 𝑠𝑖𝑙𝑙">
 <meta property="twitter:image" content="https://middlepot.com/img/pure.jpg">
 
 
