--- a/status.html
+++ b/status.html
@@ -475,7 +475,7 @@ z-index: 3;
 
 <div style="font-family: Verdana; font-size:10px; overflow-y: hidden; position: absolute; width: 150px; height: 130px;overflow-x: hidden; padding-left: 275px; padding-top: 252px; z-index: 20; line-height:8px;"><br><br>
 <br>
-<sub><img src="https://i.imgur.com/7zwZwR3.png"></sub>　<font color="#a59990" style="border-bottom:1px dashed #cfb6bb; padding-bottom: 1px; font-size:8px;">feeling</font> : <font color="#cfb6bb" style="font-size:9px;">sleepy</font>‌
+<sub><img src="https://i.imgur.com/7zwZwR3.png"></sub>　<font color="#a59990" style="border-bottom:1px dashed #cfb6bb; padding-bottom: 1px; font-size:8px;">feeling</font> : <font color="#cfb6bb" style="font-size:9px;">happy</font>‌
 <br><br>
 <sub><img src="https://i.imgur.com/7zwZwR3.png"></sub>　<font color="#a59990" style="border-bottom:1px dashed #cfb6bb; padding-bottom: 1px; font-size:8px;">working on</font> : <font color="#cfb6bb" style="font-size:9px;">web coding</font><br><br>
 ‌‌　　<font color="#cfb6bb" style="font-size:9px;">graphic drawing & editing</font><br><br>
@@ -487,6 +487,9 @@ z-index: 3;
 <div style="padding-left: 140px; padding-top: 75px;">
 <div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 300px; height: 170px; overflow-x: hidden; overflow: auto; overflow: scroll; z-index: 30; text-align:justify; line-height: 8px;">
 
+　<sub><img src="https://i.imgur.com/t1l6f1l.png"></sub>　<font color="#e0cace" style="border-bottom:1px dashed #ccbec1"><sup>04.26.22</sup></font> <font color="#c4b3b6">꒱</font>　i want a picnic in the woods
+
+<br><br><br>
 　<sub><img src="https://i.imgur.com/frgdxTH.png"></sub>　<font color="#e3d3d6" style="border-bottom:1px dashed #ccbec1;"><sup>03.27.22</sup></font> <font color="#cfbec2">꒱</font>　proud of my progress ♡
 
 <br><br><br>
@@ -512,9 +515,6 @@ z-index: 3;
 
 <br><br><br>
 　<sub><img src="https://i.imgur.com/r2hI9Vg.png"></sub>　<font color="#e3d3d6" style="border-bottom:1px dashed #ccbec1"><sup>08.11.21</sup></font> <font color="#cfbec2">꒱</font>　happy birthday to me !!!
-
-<br><br><br>
-　<sub><img src="https://i.imgur.com/t1l6f1l.png"></sub>　<font color="#e0cace" style="border-bottom:1px dashed #ccbec1"><sup>06.29.21</sup></font> <font color="#c4b3b6">꒱</font>　i will take a good rest today.
 
 <br><br>
 
